tests/baselines/reference/superSymbolIndexedAccess1(strict=true).errors.txt
superSymbolIndexedAccess1.ts(11,16): error TS7053: Element implicitly has an 'any' type because expression of type 'symbol' can't be used to index type 'Foo'.


==== superSymbolIndexedAccess1.ts (1 errors) ====
    var symbol = Symbol.for('myThing');
    
    class Foo {
        [symbol]() {
            return 0;
        }
    }
    
    class Bar extends Foo {
        [symbol]() {
            return super[symbol]();
                   ~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'symbol' can't be used to index type 'Foo'.
        }
    }